--- a/index.html
+++ b/index.html
@@ -53,9 +53,9 @@
             <!-- container -->
             <div class="container">
                 <!-- row -->
-                <div class="row">
+                <div class="header">
                     <!-- LOGO -->
-                    <div class="col-md-3">
+                    <div class="header-left">
                         <div class="header-logo">
                             <a href="#" class="logo">
                                 <img src="./img/bestprice.png" alt="">
@@ -65,9 +65,9 @@
                     <!-- /LOGO -->
 
                     <!-- SEARCH BAR -->
-                    <div class="col-md-6 col-sm-12">
+                    <div class="header-right">
                         <div class="header-search">
-                            <form>
+                            <form class="form">
                                 <select class="input-select">
                                     <option value="0">Categories</option>
 										<option value="1">Smart Phones</option>
