Fix nav-bar in mobile view

--- a/index.html
+++ b/index.html
@@ -23,13 +23,14 @@
     <!-- Custom stlylesheet -->
     <link type="text/css" rel="stylesheet" href="css/style.css" />
 
+    <base href="/">
 
     <title>Best price</title>
 </head>
 
 <body>
 
-
+    <div>
     <!-- HEADER -->
     <header>
         <!-- TOP HEADER -->
@@ -687,7 +688,7 @@
 
 
 
-
+</div>
 
 </body>
 
@@ -699,7 +700,7 @@
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick.js"></script>
-<script src="js/main.js"></script>
+<!-- <script src="js/main.js"></script> -->
 </body>
 
 </html>
